# opengl-start

./: .gitignore  CMakeLists.txt  play.cxx
include/glad/: glad.h
src/: glad.c  play.cxx
